# certusTAP

./: .gitignore  404.html  CONTRIBUTING.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  gh-pages.yml  release.yml
assets/draw.io/: Venn.drawio
assets/stylesheets/: footer.css
community/: index.html
community/conduct/: index.html
diagrams/architecture/: construct.mmd
diagrams/workflows/: provenance-ledger.mmd  review-assurance.mmd
docs/: .pages  index.md
docs/assets/images/: assurance.old
docs/assets/javascripts/: nav-toggle.js
docs/assets/stylesheets/: main.css
docs/community/: .pages  conduct.md  index.md
docs/diagrams/workflows/: basic-assurance.mmd
docs/framework/: .pages  architecture.md  index.md  principles.md  roadmap.md  testing.md
docs/framework/ontology/: .pages  index.md  tao.md
docs/framework/workflows/: .pages  assurance.md  index.md  (+3 more)
docs/getting started/: .pages  index.md  license.md  poc.md  roadmap.md  testing.md  testing.old
framework/: index.html
framework/architecture/: index.html
framework/ontology/: index.html
framework/principles/: index.html
framework/workflows/: index.html
getting started/: index.html
getting started/license/: index.html
getting started/poc/: index.html
getting started/roadmap/: index.html
getting started/testing/: index.html
overrides/partials/: footer.html
search/: search_index.json
(+5 files in other folders)
