[tool.poetry]
name = "labrador"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-mermaid2-plugin = "^1.2.3"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"


[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.2"
pymdown-extensions = "^10.16.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-exclude = "^1.0.2"
mkdocs-glightbox = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
